--- a/spring101-core/src/main/resources/application.yml
+++ b/spring101-core/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     open-in-view: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
   redis:
     #数据库索引
