1 新增 oauth2Login 功能 - customOauth2UserService //userInfoEndpoint - customAuthenticationSuccessHandler //successHandler
2 SysUser.java 新增provider column

--- a/spring101-core/src/main/resources/application.yml
+++ b/spring101-core/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
             clientId: ${GITHUB_CLIENT_ID}
             clientSecret: ${GITHUB_CLIENT_SECRET}
             scope: read:user, user:email
-          google:
+          google: # http://localhost:8000/oauth2/authorization/google 測試
             clientId: 492022338926-47lidtovuh8mk64e9oer8cooqa81gjs5.apps.googleusercontent.com
             clientSecret: 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
             scope: profile, email
