--- a/spring101-core/pom.xml
+++ b/spring101-core/pom.xml
@@ -26,6 +26,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.dandan</groupId>
+            <artifactId>spring101-logging</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
